--- a/public/topbar.html
+++ b/public/topbar.html
@@ -1,5 +1,14 @@
-<!-- *** TOPBAR ***
+    <!-- *** TOPBAR ***
 _________________________________________________________ -->
+<div id="top">
+    <div class="container">
+        <!-- add dummy errors -->
+        <!-- end dummy errors -->
+        <div class="col-md-6 offer" data-animate="fadeInDown">
+            <a href="#" class="btn btn-success btn-sm"
+            data-animate-hover="shake">Offer of the day</a> <a href="#">Buy 1000 socks, get a shoe for free</a>
+        </div>
+	    
 <div id="top">
     <div class="container">
         <!-- add dummy errors -->
